syntax = "proto3";

package silenteight.data.sampling.alerts.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.silenteight.model.api.v1";
option java_outer_classname = "AlertsDistributionServiceProto";

service DistributionAlertsService {
  rpc GetAlertsDistribution (AlertsDistributionRequest) returns (AlertsDistributionResponse) {
    option (google.api.http) = {
      post: "/v1/alerts:getDistribution"
      body: "*"
    };
  }
}

message AlertsDistributionRequest {
  // Timestamp that represents point in time where requested time range starts.
  google.protobuf.Timestamp time_range_from = 1 [(google.api.field_behavior) = REQUIRED];
  // Timestamp that represents point in time where requested time range ends.
  google.protobuf.Timestamp time_range_to = 2 [(google.api.field_behavior) = REQUIRED];
  // Requested alert's fields and their values.
  repeated string grouping_fields = 3 [(google.api.field_behavior) = REQUIRED];
}

message AlertsDistributionResponse {
  // Alerts distribution based on given fields
  repeated AlertDistribution alerts_distribution = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message AlertDistribution {
  // Grouping field
  repeated Distribution grouping_fields = 1 [(google.api.field_behavior) = REQUIRED];
  // Count value
  int32 alert_count = 2 [(google.api.field_behavior) = REQUIRED];
}

message Distribution {
  // Requested field name
  string field_name = 1 [(google.api.field_behavior) = REQUIRED];
  // Requested field value
  string field_value = 2 [(google.api.field_behavior) = REQUIRED];
}
